doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-sourcepath
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/ytzeng/Documents/Java/library/acm.jar:/Users/ytzeng/Downloads/alg4:/Users/ytzeng/Downloads/alg4/algs4.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github
-d
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
github
-windowtitle
github
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/SeqOp.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Partitions.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/HirTable.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/CHdecreaseCheck.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/CH.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/F0decreaseCheck.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/F0table.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/ArrayOp.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/MyF.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Key.java
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Complexity.java
<---- end of javadoc command ---->
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/SeqOp.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Partitions.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/HirTable.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/CHdecreaseCheck.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/CH.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/F0decreaseCheck.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/F0table.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/ArrayOp.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/MyF.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Key.java...
Loading source file /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Complexity.java...
Constructing Javadoc information...
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Complexity.java:21: error: cannot find symbol
    private arrayOP arrOP = new arrayOP(length);  
            ^
  symbol:   class arrayOP
  location: class Complexity
/Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/Complexity.java:23: error: cannot find symbol
    partitions parArr = new partitions(length, length);
    ^
  symbol:   class partitions
  location: class Complexity
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/ArrayOp.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/CH.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/CHdecreaseCheck.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/Complexity.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/F0decreaseCheck.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/F0table.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/HirTable.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/Key.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/MyF.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/Partitions.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/SeqOp.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/package-frame.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/package-summary.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/package-tree.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/constant-values.html...
Building index for all the packages and classes...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/overview-tree.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/index-all.html...
Building index for all classes...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/allclasses-frame.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/allclasses-noframe.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/index.html...
Generating /Users/ytzeng/MyStuff/Programming/Java/MyPrograms/CaporasoHarris/github/doc/help-doc.html...
2 warnings
